Bug 120632 - Text cursor disappears if row in Writer table right-click deleted
Summary: Text cursor disappears if row in Writer table right-click deleted
Status: CLOSED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
5.2.0.4 release
Hardware: All All
: low minor
Assignee: Caolán McNamara
URL:
Whiteboard: target:6.3.0 target:6.1.5 target:6.2.1
Keywords: bibisected, bisected, regression
: 118252 122630 (view as bug list)
Depends on:
Blocks: Text-Cursor
  Show dependency treegraph
 
Reported: 2018-10-15 19:24 UTC by Everton da Rosa
Modified: 2021-04-13 09:19 UTC (History)
7 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Everton da Rosa 2018-10-15 19:24:21 UTC
Description:
In LibreOffice Writer, doing operations to exclude and include lines in tables, the cursor disappears, but continues to be moved by the keyboard. you can see that it obeys the keyboard by selecting something with the shift key, for example. The cursor is only displayed with the mouse click in any region of the document.
The behavior is observed in LibreOffice 6.1.1.2 running under Debian 9.5 and GNOME 3

Steps to Reproduce:
1. Create a table
2. Delete a row or add a row (the cursor disappears)
3. Move the cursor with the keyboard (the cursor remains hidden)
4. Select something with the screen (the selection is checked, but the cursor remains hidden)
5. Click on the document (and the cursor reappears)

Actual Results:
The cursor is hidden until the document receives a mouse click.

Expected Results:
The cursor continues to appear.


Reproducible: Always


User Profile Reset: No


OpenGL enabled: Yes

Additional Info:
Comment 1 Dieter 2018-12-05 20:28:27 UTC
I can't confirm this with

Version: 6.2.0.0.beta1 (x64)
Build ID: d1b41307be3f8c19fe6f1938cf056e7ff1eb1d18
CPU threads: 4; OS: Windows 10.0; UI render: default; VCL: win; 
Locale: en-US (de_DE); UI-Language: en-GB
Calc: threaded
Comment 2 Timur 2018-12-19 09:36:02 UTC
I reproduced with LO 5.4 and 6.0 in Mint. But not with master 6.3+. 
No repro in Windows for LO 5.0. Repro for LO 5.4 and master 6.3+.
So I'll confirm. Looks like regression.
I'll mark "all" so far until others test with master both Linux and Windows. 
Minor issue.
Comment 3 raal 2018-12-19 16:52:04 UTC
I can not reproduce for Version: 6.3.0.0.alpha0+
Build ID: f8d6de19181d749d7c2b345ce7084c0c07fa3eab
CPU threads: 4; OS: Windows 6.1; UI render: default; VCL: win; 
Tried delete row from menu Table-Delete-Rows and with toolbar icon.
Comment 4 Timur 2018-12-19 17:47:26 UTC
Good catch due to raal's details. Thanks! 
Reproduced for Windows LO master for right-click row delete.
Comment 5 Buovjaga 2018-12-25 18:56:48 UTC
Bibisected with win32-5.2 to

https://gerrit.libreoffice.org/plugins/gitiles/core/+/dd46727b99d4bb5135451aa7e5e1bdb197373843%5E!/

Resolves; tdf#87120 no keyboard navigation inside floating windows

lets try and treat these the same as we do normal toplevels
like dialogs if they popup with GrabFocus.

This way focus can be set on widgets inside the floating windows, and
so keyboard traversal of widgets etc all works.

Adding Cc: to Caolán McNamara

I cannot reproduce on Linux (master).
Comment 6 Caolán McNamara 2019-01-10 13:45:31 UTC
I think this happens because its a submenu of another menu so the focus isn't restored as expected
Comment 7 Maxim Monastirsky 2019-01-10 13:58:42 UTC
*** Bug 118252 has been marked as a duplicate of this bug. ***
Comment 8 Dieter 2019-01-10 14:41:46 UTC
Perhaps bug 122630 is also a duplicate?
Comment 9 Buovjaga 2019-01-10 15:42:30 UTC
*** Bug 122630 has been marked as a duplicate of this bug. ***
Comment 10 Commit Notification 2019-01-10 21:14:05 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/59fe75cd7baab2f0c025576413cf8788ac258842%5E%21

Resolves: tdf#120632 consider submenus on restoring focus from menu

It will be available in 6.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 11 Caolán McNamara 2019-01-10 21:15:19 UTC
fixed in master, backports in gerrit
Comment 12 Xisco Faulí 2019-01-11 10:43:06 UTC
Change it to All as it can be reproduced with gen and gtk2 on linux...
Comment 13 Xisco Faulí 2019-01-11 10:53:20 UTC
Verified in

Version: 6.3.0.0.alpha0+
Build ID: c164dbaff63d67f5e89d133c272412aaf4c5c158
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: x11; 
Locale: ca-ES (ca_ES.UTF-8); UI-Language: en-US
Calc: threaded

@Caolán, thanks for fixing this!
Comment 14 Commit Notification 2019-01-11 10:57:54 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-6-1":

https://git.libreoffice.org/core/+/74f07d85d37b9a90b625f33bbf4dbd268f78b2a4%5E%21

Resolves: tdf#120632 consider submenus on restoring focus from menu

It will be available in 6.1.5.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 15 Commit Notification 2019-01-11 11:07:30 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-6-2":

https://git.libreoffice.org/core/+/385c4686717959ba26f0e35c9c582c89b730d136%5E%21

Resolves: tdf#120632 consider submenus on restoring focus from menu

It will be available in 6.2.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 16 Maathew Peter 2020-12-01 10:28:35 UTC Comment hidden (spam)
Comment 17 Mike 2021-04-13 09:17:34 UTC Comment hidden (spam)