Resolves: tdf#120632 consider submenus on restoring focus from menu

additionally to the menu having focus, if a submenu of that menu has
focus, then restore the focus when the whole hierarchy execution ends
return focus to the toplevel menu's saved focus widget

Change-Id: Iefd467fb1ba67ffd0a303505a893d2453e0ffbb3